--- a/_sass/ui-componants/_social.scss
+++ b/_sass/ui-componants/_social.scss
@@ -20,6 +20,7 @@ ul.social-links {
   }
 
   .page-nav & {
+    flex-wrap: nowrap;
     font-size: 0.5em;
   }
 }
